handle tree map no mandatory attributes